[package]
name = "smexybot"
version = "0.1.0"
authors = ["Nikita Pekin <contact@nikitapek.in>"]

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
clippy = { version = "0.0", optional = true }
env_logger = "0.4.3"
futures = "0.1.17"
hyper = "0.11.7"
hyper-tls = "0.1.2"
lazy_static = "0.2.11"
log = "0.3.8"
psutil = "1.1.0"
rand = "0.3.18"
regex = "0.2.2"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"
serenity = { version = "0.4.3", features = ["cache", "framework", "voice"] }
time = "0.1.38"
tokio-core = "0.1.10"
typemap = "0.3.3"
url = "1.6.0"
uuid = { version = "0.5.1", features = ["v4"] }
wolfram_alpha = { version = "0.4.0", default-features = false }
xkcd = "0.3.0"

[features]
default = ["with-syntex"]
nightly = ["wolfram_alpha/nightly"]
nightly-testing = [
    "clippy",
    "nightly",
]
profile = []
with-syntex = ["wolfram_alpha/with-syntex"]
